--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
             <input type="email" name="" id="userEmail" placeholder="wrire email">
             <input type="password" name="" id="userPassword" class="mt-1" placeholder="wrire password">
             <button
-               class="d-inline-block bg-black w-25 text-capitalize text-white p-2 mt-1 icon-link icon-link icon-link-hover" id="submit">submit</button>
+               class="d-inline-block bg-black w-25 text-capitalize text-white p-2 mt-1 icon-link icon-link icon-link-hover"
+               id="submit">submit</button>
 
          </div>
       </section>
@@ -106,6 +107,7 @@
 
 
 
+   <script src="main.js"></script>
    <script src="js/js.js"></script>
    <!-- <script src="main.js"></script> -->
 </body>
